--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,9 @@ h1 {
     align-items: center;
     flex-direction: column;
 }
+.photographer_section article a {
+text-decoration: none;
+}
 
 .photographer_section article h2 {
     color: #D3573C;
@@ -48,3 +51,25 @@ h1 {
     height: 200px;
     width: 200px;
 }
+.photographer_section article .location {
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 17px;
+    color: #901C1C;
+}
+.photographer_section article .line {
+
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 13px;
+}
+.photographer_section article .price {
+
+    font-weight: 400;
+    font-size: 9px;
+    line-height: 12px;
+    text-align: center;
+    color: #757575;
+}
+
+
