--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,11 +1,18 @@
+main{
+    padding: 0 100px;
+}
+
 #contact_modal {
+
+
     display: none;
+
 }
 
 .photograph-header {
     background-color: #FAFAFA;
     height: 300px;
-    margin: 0 100px;
+  
 }
 
 .contact_button {
@@ -24,12 +31,12 @@
 .modal {
     border-radius: 5px;
     background-color: #DB8876;
-    width: 50%;
+    width: 40%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 35px;
+    padding: 30px;
     margin: auto;
 }
 
@@ -43,12 +50,15 @@
 }
 
 .modal header h2 {
-    font-size: 64px;
+    font-size: 50px;
     font-weight: normal;
     text-align: center;
+
 }
 
 form {
+    margin-top: 20px;
+    
     display: flex;
     width: 100%;
     flex-direction: column;
@@ -74,3 +84,203 @@ form input {
     border: none;
     border-radius: 5px;
 }
+
+
+.photograph-header {
+    background-color: #fafafa;
+    height: 300px;
+ 
+    padding: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .photograph-header-name {
+    color: #D3573C;
+    font-size: 64px;
+    font-weight: 400;
+    line-height: 83px;
+  }
+  
+  .photograph-header-city {
+    color:#901C1C;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 31px;
+    margin-top: 10px;
+  }
+  
+  .photograph-header-tagline {
+    color:#525252 ;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 23px;
+    margin-top: 20px;
+  }
+  
+  .photograph-header-img {
+    width: 300px;
+    height: 300px;
+    border-radius: 100%;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
+  }
+
+
+
+
+  .media-section {
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+  
+    padding: 0 ;
+    overflow: hidden;
+    flex-wrap: wrap;
+  }
+
+  .media-card {
+
+    width:30%;
+  }
+  /* .media-card-img {
+
+  }
+   */
+
+  
+  /* .media-card-img:hover i {
+
+  } */
+  
+  .media-card-img {
+    width: 100%;
+    height: 300px;
+    border-radius: 5px;
+    overflow: hidden;
+    cursor: pointer;
+  }
+  .media-card-img > img,
+  .media-card-img > video {
+    width: 100%;
+    height: 300px;
+    transition: transform 0.3s ease-in-out;
+  }
+  
+  .media-card-img:hover > img,
+  .media-card-img:hover > video {
+    transform: scale(1.1);
+  }
+  
+  .media-card-description {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 10px;
+    color: #901C1C;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 31px;
+  }
+  
+  .media-card-heart-btn i {
+    margin-left: 5px;  
+
+  
+    
+  }
+  .media-card-title {
+    font-size: inherit;
+    font-weight: inherit;
+    line-height: inherit;
+    width: 275px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  /* .photographer-section {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 70px;
+    margin-top: 100px;
+} */
+
+.photographer-section article {
+    justify-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.photographer-section article a {
+    justify-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.photographer-section article h2 {
+    color: #D3573C;
+    font-size: 36px;
+}
+
+.photographer-section article img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 100%;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
+  }
+
+.photographer-section article .location {
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 17px;
+    color: #901C1C;
+}
+.photographer-section article .line {
+
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 13px;
+}
+.photographer-section article .price {
+
+    font-weight: 400;
+    font-size: 9px;
+    line-height: 12px;
+    text-align: center;
+    color: #757575;
+}
+
+.info-bar {
+    position: fixed;
+    z-index: 1;
+    width: 350px;
+    bottom: 0;
+    right: 5%;
+    padding: 20px 35px;
+    border-radius: 5px 5px 0 0;
+    background-color:  #DB8876;;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 24px;
+  }
+  
+  .info-bar-likes {
+    margin-right: auto;
+  }
+  
+  .info-bar-left i {
+    color: #000000;
+  }
+
+  .media-card-heart-btn:hover {
+    color: #FAFAFA;
+    background-color: #901C1C;
+    cursor: pointer;
+
+  }
