--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,11 @@ h1 {
     flex-direction: column;
 }
 .photographer_section article a {
-text-decoration: none;
+    justify-self: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .photographer_section article h2 {
@@ -48,9 +52,13 @@ text-decoration: none;
 }
 
 .photographer_section article img {
-    height: 200px;
     width: 200px;
-}
+    height: 200px;
+    object-fit: cover;
+    border-radius: 100%;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
+  }
+
 .photographer_section article .location {
     font-weight: 400;
     font-size: 13px;
@@ -71,5 +79,30 @@ text-decoration: none;
     text-align: center;
     color: #757575;
 }
+
+.info-bar {
+    position: fixed;
+    z-index: 1;
+    width: 350px;
+    bottom: 0;
+    right: 5%;
+    padding: 20px 35px;
+    border-radius: 5px 5px 0 0;
+    background-color:  #DB8876;;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 24px;
+  }
+  
+  .info-bar-likes {
+    margin-right: auto;
+  }
+  
+  .info-bar-left i {
+  
+    margin-left: 5px;
+    color: #000000;
+  }
 
 
