--- a/css/photographer.css
+++ b/css/photographer.css
@@ -47,6 +47,7 @@ main{
 
 .modal header img {
     cursor: pointer;
+    object-fit: cover;
 }
 
 .modal header h2 {
@@ -120,10 +121,12 @@ form input {
   }
   
   .photograph-header-img {
+    margin-left: 30px;
     width: 300px;
     height: 300px;
     border-radius: 100%;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
+    object-fit: cover;
   }
 
 
@@ -147,11 +150,23 @@ form input {
 
   }
    */
-
-  
-  /* .media-card-img:hover i {
-
-  } */
+   .media-card-img {
+    position: relative;
+  }
+   .media-card-img i {
+    position: absolute;
+    font-size: 5rem;
+    color: #fff;
+    opacity: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+  }
+   .media-card-img:hover i {
+    opacity: 75%;
+    pointer-events: none;
+  }
   
   .media-card-img {
     width: 100%;
@@ -165,6 +180,7 @@ form input {
     width: 100%;
     height: 300px;
     transition: transform 0.3s ease-in-out;
+    object-fit: cover;
   }
   
   .media-card-img:hover > img,
@@ -284,3 +300,53 @@ form input {
     cursor: pointer;
 
   }
+
+
+
+
+.sort {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 100px;
+}
+
+.menuSelect{
+    background-color:  #901C1C;
+    color: white;
+    font-size: 1.3rem;
+    font-weight: bold;
+    margin-left: 20px;
+    width: 180px;
+    position: relative;
+    z-index: 1;
+    padding: 15px 0;
+    padding-left: 20px;
+    transition: 0.8s;
+    cursor: pointer;
+}
+
+select {
+    -webkit-appearance: none;
+    appearance: none;
+
+    border: none;
+    color: white;
+    padding: 2%;
+    font-weight: bold;
+    font-size: 1.3rem;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+
+.menuSelect:hover{
+    background-color:  #901C1C;
+    transform: scale(1.02);
+    box-shadow: 1px 1px 8px 0px  #312e2e;
+    
+}
+
+.pop, .date, .titre{
+    font-size: 1.3rem;   
+}
